Ingredient formatting correction, and random cocktail endpoint
